# starlog

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
app/: root.tsx
app/components/: Advertisment.tsx  BurgerMenu.tsx  ButtonAsLink.tsx  Carousel.tsx  CategoryIcon.tsx  Contribute.tsx  ContributeBannerBox.tsx  FilterItem.tsx  Footer.tsx  HomeLayout.tsx  HomePlace.tsx  JoinBannerBox.tsx  LinkButtonElement.tsx  NavMenu.tsx  NavMenuItem.tsx  PlaceSummary.tsx  PlacesLayout.tsx  UserInfo.tsx  UserProfile.tsx
app/data/: dummy.ts  navigation.ts
app/routes/: index.tsx  login.tsx  logout.tsx  myplaces.tsx  profile.tsx  signup.tsx
app/routes/action/: set-theme.tsx
app/routes/places/: $placeId.tsx  index.tsx  new.tsx  places.tsx
app/routes/profile/: index.tsx
app/routes/profile/edit/: $userId.tsx
app/styles/: app.css
app/utils/: calcCostRating.server.ts  calcOverall.ts  cloudinaryUpload.server.ts  formatDate.ts  generateScoreBars.tsx  getUnique.ts  login.server.ts  login.ts  theme-provider.tsx  theme.server.ts  validateUrl.ts
include/starlog/: observation.h  observation_log.h
prisma/: schema.prisma  seed.ts
src/: main.cpp  observation.cpp  observation_log.cpp
styles/: app.css
